# marcelarie.com-backend-api

./: Cargo.toml  Procfile  README.md  RustConfig  TODO.md  docker-compose.yml  rustfmt.toml
migrations/2021-06-17-193330_create_posts/: up.sql
migrations/2021-06-20-190815_create_posts_table/: up.sql
src/: connection.rs  main.rs  old.main.rs  schema.rs
src/guards/: mod.rs
src/models/: post.rs
src/repositories/: mod.rs
src/routes/: mod.rs
