[package]
name = "marcelarie-backend-api"
version = "0.1.0"
authors = ["Marcel Arie <googlillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"

[dependencies.rocket_contrib]
version ="*"
default-features = false
features = ["json"]
